--- a/configure.in
+++ b/configure.in
@@ -1132,6 +1132,22 @@ if test "${enable_oom}" = yes; then
   AC_DEFINE([TEST_OOM], 1, [Whether malloc OOM checking is enabled])
 fi
 
+
+AC_ARG_ENABLE([test-locking],
+[  --enable-test-locking       thread locking tests using CIL],
+[case "${enableval}" in
+   yes|no) ;;
+   *)      AC_MSG_ERROR([bad value ${enableval} for test-locking option]) ;;
+ esac],
+              [enableval=no])
+enable_locking=$enableval
+
+if test "$enable_locking" = "yes"; then
+  LOCK_CHECKING_CFLAGS="-Dbool=char -D_Bool=char -save-temps"
+  AC_SUBST([LOCK_CHECKING_CFLAGS])
+fi
+AM_CONDITIONAL([WITH_CIL],[test "$enable_locking" = "yes"])
+
 dnl Enable building the proxy?
 
 AC_ARG_WITH([xen-proxy],
