Add the Interface config APIs * configure.in include/libvirt/libvirt.h[.in]   include/libvirt/virterror.h qemud/remote.c   qemud/remote_dispatch_args.h qemud/remote_dispatch_prototypes.h   qemud/remote_dispatch_ret.h qemud/remote_dispatch_table.h   qemud/remote_protocol.[chx] src/Makefile.am src/datatypes.c   src/datatypes.h src/driver.h src/libvirt.c src/remote_internal.c   src/virterror.c src/libvirt_private.syms src/libvirt_public.syms:   Add the Interface config APIs and remote stubs for those, patch   by Laine Stump * AUTHORS: add Laine daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -352,6 +352,11 @@ endif
 libvirt_driver_network_la_SOURCES = $(NETWORK_DRIVER_SOURCES)
 endif
 
+if WITH_NETCF
+libvirt_driver_interface_la_CFLAGS = $(NETCF_CFLAGS)
+libvirt_driver_interface_la_LDFLAGS = $(NETCF_LIBS)
+endif
+
 # Needed to keep automake quiet about conditionals
 libvirt_driver_storage_la_SOURCES =
 if WITH_STORAGE_DIR
