--- a/.hgignore
+++ b/.hgignore
@@ -270,6 +270,7 @@ tests/object-locking
 tests/object-locking-files.txt
 tests/object-locking.cmi
 tests/object-locking.cmx
+tests/qemuargv2xmltest
 tests/qemuxml2argvtest
 tests/qemuxml2xmltest
 tests/qparamtest
