fix storage volume inconsistencies in schema and doc * docs/schemas/storagevol.rng docs/formatstorage.html[.in]   tests/storagevolschemadata/vol-qcow2.xml: fix storage volume   inconsistencies in schema and document, patch by Ryota Ozaki daniel

--- a/docs/formatstorage.html.in
+++ b/docs/formatstorage.html.in
@@ -183,7 +183,7 @@
     <h3><a name="StorageVolFirst">General metadata</a></h3>
 
     <pre>
-      &lt;volume type="file"&gt;
+      &lt;volume&gt;
 	&lt;name&gt;sparse.img&lt;/name&gt;
 	&lt;key&gt;/var/lib/xen/images/sparse.img&lt;/key&gt;
         &lt;allocation&gt;0&lt;/allocation&gt;
@@ -353,7 +353,7 @@
     <h3><a name="exampleVol">Storage volume</a></h3>
 
     <pre>
-      &lt;volume type="file"&gt;
+      &lt;volume&gt;
 	&lt;name&gt;sparse.img&lt;/name&gt;
 	&lt;allocation&gt;0&lt;/allocation&gt;
 	&lt;capacity unit="T"&gt;1&lt;/capacity&gt;
