--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -508,6 +508,10 @@ fi
 %endif
 
 %changelog
+* Fri May 29 2009 Daniel Veillard <veillard@redhat.com> - 0.6.4-1
+- release of 0.6.4
+- various new APIs
+
 * Fri Apr 24 2009 Daniel Veillard <veillard@redhat.com> - 0.6.3-1
 - release of 0.6.3
 - VirtualBox driver
