NPIV implementation for node device create and destroy * src/Makefile.am src/node_device.[ch] src/node_device_conf.[ch]   src/node_device_hal.[ch] src/node_device_hal_linux.c   src/qemu_driver.c src/remote_internal.c src/storage_backend.c   src/virsh.c src/xen_unified.c tests/nodedevxml2xmltest.c   po/POTFILES.in: implementation for node device create and destroy   in NPIV support, patch by David Allan Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -195,7 +195,9 @@ NODE_DEVICE_DRIVER_SOURCES =					\
 		node_device.c node_device.h
 
 NODE_DEVICE_DRIVER_HAL_SOURCES =				\
-		node_device_hal.c
+		node_device_hal.c				\
+		node_device_hal_linux.c
+
 NODE_DEVICE_DRIVER_DEVKIT_SOURCES =				\
 		node_device_devkit.c
 
