Added docs on extending public API (Dave Allen)

--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -210,6 +210,16 @@
               </li>
             </ul>
           </li>
+          <li>
+            <a href="internals.html">Internals</a>
+            <span>Working on the internals of libvirt API, driver and daemon code</span>
+            <ul>
+              <li>
+                <a href="api_extension.html">API extensions</a>
+                <span>Adding new public libvirt APIs</span>
+              </li>
+            </ul>
+          </li>
         </ul>
       </li>
       <li>
