Add HACKING doc to the website

--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -214,6 +214,10 @@
             <a href="internals.html">Internals</a>
             <span>Working on the internals of libvirt API, driver and daemon code</span>
             <ul>
+	      <li>
+		<a href="hacking.html">Contributor guidelines</a>
+		<span>General hacking guidelines for contributors</span>
+	      </li>
               <li>
                 <a href="api_extension.html">API extensions</a>
                 <span>Adding new public libvirt APIs</span>
