OpenNebula driver documentation * docs/drvone.html.in docs/drvone.html docs/drivers.html.in   docs/hvsupport.html.in docs/sitemap.html.in docs/*: added   documentation for OpenNebula driver by Abel Miguez Rodriguez   and regenerated the docs Daniel

--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -148,6 +148,10 @@
                 <a href="drvvbox.html">VirtualBox</a>
                 <span>Driver for VirtualBox</span>
               </li>
+              <li>
+                <a href="drvone.html">OpenNebula</a>
+                <span>Driver for OpenNebula</span>
+              </li>
             </ul>
           </li>
           <li>
