--- a/docs/downloads.html.in
+++ b/docs/downloads.html.in
@@ -27,7 +27,7 @@
       <li><a href="http://libvirt.org/sources/libvirt-git-snapshot.tar.gz">libvirt.org HTTP server</a></li>
     </ul>
 
-      <h2>GIT repository mirror</h2>
+      <h2>GIT source repository</h2>
       <p> Libvirt code source is now maintained in a <a
       href="http://git-scm.com/">git</a> repository available on
       <a href="http://libvirt.org/git/">libvirt.org</a>:
@@ -54,7 +54,7 @@
     </pre>
       <p> The server is maintainened temporarilly for existing uses, but all
       changes are only commited to git now and we expect to deprecate the CVS
-      server within weeks. </p>
+      server during summer 2009. </p>
 
        <h2>Building from a source code checkout</h2>
     <p> The libvirt build process uses GNU autotools, so after obtaining a
@@ -72,21 +72,20 @@
     <h2>GIT repository mirror</h2>
 
     <p>
-      The CVS source repository is also mirrored using GIT, and is available
-      for anonymous access via:
+      Jim Mereying was maintaining a CVS to git mirror on
+      <a href="http://git.et.redhat.com/?p=libvirt.git">git.et.redhat.com</a>.
+      Existing users should migrate to the new git server, as the
+      old one will be deprecated and turned into a mirror of the
+      libvirt.org one. It's available as:
     </p>
-
     <pre>
 
       git clone git://git.et.redhat.com/libvirt.git
     </pre>
-
     <p>
       It can also be browsed at
     </p>
-
     <pre>
-
       <a href="http://git.et.redhat.com/?p=libvirt.git;a=summary">http://git.et.redhat.com/?p=libvirt.git;a=summary</a>
     </pre>
 
