fix failing "make distcheck"
* docs/Makefile.am (xml): Distribute testpool.xml and testvol.xml,
which are referenced from testnode.xml.

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -55,7 +55,9 @@ xml = \
   testdomfv0.xml \
   testnetdef.xml \
   testnetpriv.xml \
-  testnode.xml
+  testnode.xml \
+  testpool.xml \
+  testvol.xml
 
 fig = \
   libvirt-net-logical.fig \
