Add new net filesystem glusterfs
* src/storage_conf.c src/storage_conf.h: adds glusterfs to the list
  of network storage
* libvirt.spec.in: adds the dependency on glusterfs-client

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -94,6 +94,8 @@ BuildRequires: util-linux
 # For showmount in FS driver (netfs discovery)
 BuildRequires: nfs-utils
 Requires: nfs-utils
+# For glusterfs
+Requires: glusterfs-client >= 2.0.2
 %endif
 %if %{with_qemu}
 # From QEMU RPMs
