build: automatically rerun ./bootstrap when needed
When "git pull" (or any other operation) brings in a new version of the
gnulib git submodule, you must rerun the autogen.sh script.  With this
change, "make" now fails and tells you to run ./autogen.sh, when needed.
* autogen.sh: Maintain a new file, .git-module-status, containing
the current submodule status.  If it doesn't exist or its content
is different from what "git submodule status" prints, then run
./bootstrap
* .gitignore: Add .git-module-status
* cfg.mk: Diagnose out of date submodule and fail.
* README-hacking: Update not to mention bootstrap.
* Makefile.am (MAINTAINERCLEANFILES): Add .git-module-status,
so that "make maintainerclean" will remove it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -48,6 +48,8 @@ cov: clean-cov
 clean-cov:
 	rm -rf $(top_builddir)/coverage
 
+MAINTAINERCLEANFILES = .git-module-status
+
 # disable this check
 distuninstallcheck:
 
