--- a/docs/bugs.html.in
+++ b/docs/bugs.html.in
@@ -23,7 +23,7 @@
     </p>
 
     <ul>
-      <li><a href="">View libvirt tickets</a></li>
+      <li><a href="http://bugzilla.redhat.com/buglist.cgi?component=libvirt&amp;product=Virtualization%20Tools">View libvirt tickets</a></li>
       <li><a href="http://bugzilla.redhat.com/bugzilla/enter_bug.cgi?product=Virtualization%20Tools&amp;component=libvirt">New libvirt ticket</a></li>
     </ul>
 
@@ -34,7 +34,7 @@
 	tickets against the <code>Fedora</code> product and the <code>libvirt</code>
 	component.
 	<ul>
-	  <li><a href="">View Fedora libvirt tickets</a></li>
+	  <li><a href="http://bugzilla.redhat.com/buglist.cgi?component=libvirt&amp;product=Fedora">View Fedora libvirt tickets</a></li>
 	  <li><a href="http://bugzilla.redhat.com/bugzilla/enter_bug.cgi?product=Fedora&amp;component=libvirt">New Fedora libvirt ticket</a></li>
 	</ul>
       </li>
