add support for netcf XML import and export
* src/interface_conf.c src/interface_conf.h: the import and export
  routines and the internal APIs
* src/Makefile.am: hook the new file in the makefiles
* src/libvirt_private.syms: export a few private symbols internally
* po/POTFILES.in: the new file contains translatable strings

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,6 +5,7 @@ src/conf.c
 src/console.c
 src/datatypes.c
 src/domain_conf.c
+src/interface_conf.c
 src/iptables.c
 src/libvirt.c
 src/lxc_container.c
