--- a/src/qemu.conf
+++ b/src/qemu.conf
@@ -88,3 +88,10 @@
 # to 'none' instead
 #
 # security_driver = "selinux"
+
+
+# The user ID for QEMU processes run by the system instance
+#user = "root"
+
+# The group ID for QEMU processes run by the system instance
+#group = "root"
